Fixed delete function to correctly delete a user when clicked, also made fuctionality for editing the usersand redirecting back to the list page with updated information.

--- a/views/userCreate.pug
+++ b/views/userCreate.pug
@@ -1,7 +1,7 @@
 html
     head
     body
-        form(method="post", action="/userListing")
+        form(method="post", action="/createUser")
             div
                 label(for="name") Name
                 input(id="name", name="name")
